erDiagram
    CLIENT ||--o{ APPOINTMENT : books
    STAFF_MEMBER ||--o{ APPOINTMENT : performs
    SERVICE_CATEGORY ||--o{ SERVICE : contains
    APPOINTMENT ||--|{ APPOINTMENT_SERVICE : includes
    SERVICE ||--o{ APPOINTMENT_SERVICE : selected_in
    APPOINTMENT ||--o| PAYMENT : paid_by
    APPOINTMENT ||--o| REVIEW : receives

    CLIENT {
        int client_id PK
        varchar first_name
        varchar last_name
        varchar phone UK
        varchar email UK
        date created_at
    }

    STAFF_MEMBER {
        int staff_id PK
        varchar first_name
        varchar last_name
        varchar specialization
        varchar phone UK
        date hire_date
    }

    SERVICE_CATEGORY {
        int category_id PK
        varchar category_name UK
        text description
    }

    SERVICE {
        int service_id PK
        int category_id FK
        varchar service_name
        int duration_minutes
        numeric price
        boolean is_active
    }

    APPOINTMENT {
        int appointment_id PK
        int client_id FK
        int staff_id FK
        timestamp starts_at
        enum status
        timestamp created_at
    }

    APPOINTMENT_SERVICE {
        int appointment_id PK,FK
        int service_id PK,FK
        int quantity
        numeric price_at_booking
    }

    PAYMENT {
        int payment_id PK
        int appointment_id FK,UK
        numeric amount
        enum method
        timestamp paid_at
    }

    REVIEW {
        int review_id PK
        int appointment_id FK,UK
        int rating
        text comment
        timestamp created_at
    }
